--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "gulp-sass": "^4.0.2",
     "map-stream": "0.0.7",
     "markdown-it": "^8.4.2",
-    "markdown-it-attrs": "^2.4.1"
+    "markdown-it-attrs": "^2.4.1",
+    "minimist": "^1.2.2"
   }
 }
